feat: enable/disable an org/project/group/user
- fixes delete relation bug
- delete a user/group/project/org
- filter user/org/group/project listing based on query params
